# Aventail

./: .gitignore  CMakeLists.txt  makefile  readme.md
assets/gfx/: font.readme
assets/maps/: dungeon01.tmx  dungeon02.tmx  map01.tmx  map02.tmx  map03.tmx  readme.md  surface01.tmx  tileset.tsx
assets/sfx/: attack01.sfxr  cash_pickup_01.sfxr  door.sfxr  error.sfxr  heal.sfxr  menu_nav.sfxr  readme.md
common/include/: actor.h  actor_ai.h  actor_funcs.h  actor_list.h  actor_type.h  args.h  direction.h  flip_flag.h  gear.h  inventory.h  item.h  item_type.h  map.h  map_file.h  map_link.h  map_save_util.h  map_util.h  player.h  stat_type.h  stats.h  string_util.h  tile.h  vision.h  world.h
common/src/: CMakeLists.txt  actor.c  actor_ai.c  actor_funcs.c  actor_list.c  args.c  direction.c  gear.c  inventory.c  item.c  item_type.c  map.c  map_file.c  map_link.c  map_save_util.c  map_util.c  stats.c  string_util.c  vision.c  world.c
game/include/: a_star.h  actor_defs.h  actor_funcs.h  audio.h  blink_state_data.h  camera.h  flip_flag.h  game.h  game_state.h  game_state_game_over.h  game_state_gear.h  game_state_help.h  game_state_inventory.h  game_state_level.h  game_state_load_map.h  game_state_main_menu.h  game_state_status.h  game_state_transition.h  gear_slot_widget.h  gear_widget.h  gui.h  gui_gauge_string.h  gui_int_string.h  gui_screen.h  gui_string.h  input.h  input_device.h  inventory_widget.h  item_defs.h  item_funcs.h  item_slot_widget.h  item_type_widget.h  light.h  map_load_util.h  panel.h  path_finder.h  paths.h  player_hud.h  point.h  render.h  (+6 more)
game/src/: CMakeLists.txt  a_star.c  actor_defs.c  actor_funcs.c  audio.c  blink_state_data.c  camera.c  game.c  game_state.c  game_state_game_over.c  game_state_gear.c  game_state_help.c  game_state_inventory.c  game_state_level.c  game_state_load_map.c  game_state_main_menu.c  game_state_status.c  game_state_transition.c  gear_slot_widget.c  gear_widget.c  gui.c  gui_gauge_string.c  gui_int_string.c  gui_screen.c  gui_string.c  input.c  inventory_widget.c  item_defs.c  item_funcs.c  item_slot_widget.c  item_type_widget.c  light.c  main.c  map_load_util.c  panel.c  path_finder.c  paths.c  player_hud.c  render.c  simulate.c  (+5 more)
map_converter/include/: tmx_loader.h  xml_util.h
map_converter/src/: CMakeLists.txt  map_converter.c  tmx_loader.c  xml_util.c
test/src/: CMakeLists.txt  map_tests.c
